# backend/api_docs.yaml
@@ -87,7 +87,7 @@ paths:
               access_token:
                 type: "string"
                 example: "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6MywidXNlcm5hbWUiOiJFZGRpZSBNdXJwaHkiLCJzdHVkZW50X2lkIjoiMTQ1Nzc4MDAiLCJmaXJzdF9uYW1lIjoiRW1pbHkiLCJzdXJuYW1lIjoiTWNHaXZlcm4iLCJ2ZXJpZmllZCI6MSwiZW1haWwiOiJlbWlseS5tY2dpdmVybjRAbWFpbC5kY3UuaWUiLCJwYXNzd3JkIjoiJDJhJDEwJERJSElubVBTWVJvNjhqUUd6TC9HVWU2cUxQaWtNSVY2VGtyc29PTzhaTXU4Z2hSZlJBTE95In0.fPZVIxg5a77bm08ErdWtxgYw3B_IgfNxO8BAsWAimyo"
-        400:
+        401:
           description: "Bad info sent, or info missing."
           schema:
             type: "object"
@@ -95,7 +95,7 @@ paths:
               message:
                 type: "string"
                 example: "Bad login credentials."
-        401:
+        403:
           description: "The account has yet to be verified."
           schema:
             type: "object"
@@ -103,6 +103,14 @@ paths:
               message:
                 type: "string"
                 example: "Account not verified."
+        422:
+          description: "Malformed request body."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "A req validation traceback will be here."
         503:
           description: "Server is unavailable"
           schema:
@@ -142,14 +150,14 @@ paths:
               message:
                 type: "string"
                 example: "User has been successfully logged out!"
-        400:
-          description: "Missing access token"
+        422:
+          description: "Malformed request body."
           schema:
             type: "object"
             properties:
               message:
                 type: "string"
-                example: "Missing access token."
+                example: "A req validation traceback will be here."
         503:
           description: "Server is unavailable"
           schema:
@@ -160,6 +168,85 @@ paths:
                 example: "MySQL unavailable."
 
   /users:
+    get:
+      tags:
+      - "users"
+      summary: "Get a user's publicly available information."
+      description: "By passing the username of the user who's information you want to see, along with your access_token, you will receive back a JSON object with a user's basic profile information."
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+        - in: "query"
+          name: "username"
+          type: "string"
+          required: false
+          description: "The username of the user who's info you wish to view."
+        - in: "query"
+          name: "access_token"
+          type: "string"
+          required: false
+          description: "Your access_token."
+      responses:
+        200:
+          description: "User's Info"
+          schema:
+            type: "object"
+            properties:
+              followers:
+                type: "integer"
+                example: 200
+              following:
+                type: "integer"
+                example: 500
+              likes:
+                type: "integer"
+                example: 123
+              posts:
+                type: "integer"
+                example: 100
+              profile_pic_url:
+                type: "string"
+                example: "NOT IMPLEMENTED"
+              songs:
+                type: "integer"
+                example: 321
+              username:
+                type: "string"
+                example: "TestUser"
+        401:
+          description: "Access_token expired"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Token expired."
+        422:
+          description: "Malformed request body."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "A req validation traceback will be here."
+        500:
+          description: "Server error"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Server failed to decode token."
+        503:
+          description: "Server is unavailable"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "MySQL unavailable."
     post:
       tags:
       - "users"
@@ -196,21 +283,29 @@ paths:
                 type: "string"
                 example: "User created!"
         400:
-          description: "Some info is bad, already exists in the DB or is missing!"
+          description: "Invalid email address format."
           schema:
             type: "object"
             properties:
               message:
                 type: "string"
-                example: "Some info is missing or already exists in the DB."
-        503:
-          description: "Server is unavailable"
+                example: "Invalid email address."
+        409:
+          description: "User already exists."
           schema:
             type: "object"
             properties:
               message:
                 type: "string"
-                example: "MySQL unavailable."
+                example: "User already exists!"
+        422:
+          description: "Malformed request body."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "A req validation traceback will be here."
         500:
           description: "Server error"
           schema:
@@ -219,6 +314,14 @@ paths:
               message:
                 type: "string"
                 example: "Error while hashing password."
+        503:
+          description: "Server is unavailable"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "MySQL unavailable."
                 
   /users/reverify:
     post:
@@ -266,14 +369,309 @@ paths:
               message:
                 type: "string"
                 example: "Already verified."
-        500:
-          description: "Failed to send verification email."
+        422:
+          description: "Malformed request body."
           schema:
             type: "object"
             properties:
               message:
                 type: "string"
-                example: "Verification mail failed to send."
+                example: "A req validation traceback will be here."
+        503:
+          description: "Server is unavailable"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "MySQL unavailable."
+                
+  /users/post:
+    post:
+      tags:
+      - "users"
+      summary: "Post a new status update."
+      description: "Takes the text and access_token of a given user and makes a post on there account."
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Access_token of the user and the message they wish to post. "
+        required: true
+        schema:
+          type: "object"
+          properties:
+            access_token:
+              type: "string"
+              example: "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6MywidXNlcm5hbWUiOiJFZGRpZSBNdXJwaHkiLCJzdHVkZW50X2lkIjoiMTQ1Nzc4MDAiLCJmaXJzdF9uYW1lIjoiRW1pbHkiLCJzdXJuYW1lIjoiTWNHaXZlcm4iLCJ2ZXJpZmllZCI6MSwiZW1haWwiOiJlbWlseS5tY2dpdmVybjRAbWFpbC5kY3UuaWUiLCJwYXNzd3JkIjoiJDJhJDEwJERJSElubVBTWVJvNjhqUUd6TC9HVWU2cUxQaWtNSVY2VGtyc29PTzhaTXU4Z2hSZlJBTE95In0.fPZVIxg5a77bm08ErdWtxgYw3B_IgfNxO8BAsWAimyo"
+            message:
+              type: "string"
+              example: "Hi my amazing fans!"
+      responses:
+        200:
+          description: "Post made successfully"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Message posted."
+        401:
+          description: "User's token has expired"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Token expired."
+        422:
+          description: "Malformed request body."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "A req validation traceback will be here."
+        500:
+          description: "Failed to decode token."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Server failed to decode token."
+        503:
+          description: "Server is unavailable"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "MySQL unavailable."
+                
+  /users/posts:
+    get:
+      tags:
+      - "users"
+      summary: "Get all of the posts made by a particular user."
+      description: "This endpoint takes several arguments and returns a subset of posts, ordered chronologically from newest to oldest, made by a particular user. The arguments that can be provided are as follows:\n\n \"username\" = If a 'next_page' or 'back_page' argument is not sent, then this argument is mandatory. This should be set to the username of the user who's posts you are trying to view.\n\n \"access_token\" = If a 'next_page' or 'back_page' argument is not sent, then this argument is mandatory. This should be set to the access_token of the currently signed in user.\n\n \"posts_per_page\" = If a 'next_page' or 'back_page' argument is not sent, then this an optional argument you may send. This is used to adjust the number of posts you will get back per page of results.\n\n \"current_page\" = If a 'next_page' or 'back_page' argument is not sent, then this is an optional argument you may send. This is used to navigate through each of the pages of results. If this argument is not sent, the default page of results returned will be page 1.\n\n \"next_page\" = If this value is sent, then a back_page value should not be sent. This value should be set to a 'next_page' token. These tokens are returned by standard requests to support infinited scrolling. Making a request with this token requires no other value to be passed as it encodes the user's access token, the page value we want and the number of posts we want per page.\n\n \"back_page\" = If this value is sent, then a next_page value should not be sent. This value should be set to a 'back_page' token. These tokens are returned by standard requests to support infinited scrolling. Making a request with this token requires no other value to be passed as it encodes the user's access token, the page value we want and the number of posts we want per page."
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+        - in: "query"
+          name: "username"
+          type: "string"
+          required: false
+          description: "The username of the user who's posts you wish to view."
+        - in: "query"
+          name: "access_token"
+          type: "string"
+          required: false
+          description: "Your access_token."
+        - in: "query"
+          name: "current_page"
+          type: "string"
+          required: false
+          description: "The page of results you wish to view."
+        - in: "query"
+          name: "posts_per_page"
+          type: "string"
+          required: false
+          description: "The number of posts you wish to have per page of results."
+        - in: "query"
+          name: "next_page"
+          type: "string"
+          required: false
+          description: "A next page token to get the next page of results."
+        - in: "query"
+          name: "back_page"
+          type: "string"
+          required: false
+          description: "A back_page token to get the previous page of results."
+      responses:
+        200:
+          description: "Post made successfully"
+          schema:
+            type: "object"
+            properties:
+              back_page:
+                type: "string"
+                example: "will be null or a token"
+              current_page:
+                type: "integer"
+                example: 1
+              next_page:
+                type: "string"
+                example: "will be null or a token"
+              posts:
+                type: "array"
+                items:
+                  type: "array"
+                  items:
+                    type: "string"
+                  example:
+                    - "test message"
+                    - "Fri, 01 Nov 2019 19:12:27 GMT"
+              posts_per_page:
+                type: "integer"
+                example: 50
+              total_pages:
+                type: "integer"
+                example: 2
+        401:
+          description: "User's token has expired"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Token expired."
+        422:
+          description: "Malformed request body."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "A req validation traceback will be here."
+        500:
+          description: "Failed to decode token."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Server failed to decode token."
+        503:
+          description: "Server is unavailable"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "MySQL unavailable."
+                
+  /users/reset:
+    get:
+      tags:
+      - "users"
+      summary: "Get a password reset code emailed to you."
+      description: "This endpoint takes the email address of the user who has forgotten there password, and email's them an 8-digit code they can use to reset there password. This code is valid for up to 30 minutes. This endpoint can be hit again for a new code."
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+        - in: "query"
+          name: "email"
+          type: "string"
+          required: false
+          description: "The email address of the user who has forgotten there password."
+      responses:
+        200:
+          description: "Password reset code sent"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Email sent."
+        400:
+          description: "Bad request"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Bad request."
+        422:
+          description: "Malformed request parameters."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Email param can't be empty!"
+        503:
+          description: "Server is unavailable"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "MySQL unavailable."
+    post:
+      tags:
+      - "users"
+      summary: "Get a password reset code emailed to you."
+      description: "This endpoint takes the email address of the user who has forgotten there password, and email's them an 8-digit code they can use to reset there password. This code is valid for up to 30 minutes. This endpoint can be hit again for a new code."
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "The request body should contain, the reset code emailed to the user, the user's email address and the new password they wish to set."
+        required: true
+        schema:
+          type: "object"
+          properties:
+            code:
+              type: "integer"
+              example: 12345678
+            email:
+              type: "string"
+              example: "test@email.com"
+            password:
+              type: "string"
+              example: "newPassword"
+      responses:
+        200:
+          description: "Password reset."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Password reset."
+        400:
+          description: "Bad request"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Bad request."
+        401:
+          description: "Reset code expired"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "The reset code has expired. Please request a new one."
+        422:
+          description: "Malformed request body."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "A req validation traceback will be here."
+        500:
+          description: "Server error"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Error while hashing password."
         503:
           description: "Server is unavailable"
           schema:
